       the maintainer scripts are taking care of removing files previously
       created in that directory).
  * debian/libgphoto2-2-dev.files:
     - Drop “*.la” files.
     - Remove them in debian/rules before trying to remove debian/tmp.
     - Drop the recursive symlink (“/usr/include/gphoto2/gphoto2 -> .”).
     - Remove it in debian/rules before running dh_movefiles.

 -- Cyril Brulebois <kibi@debian.org>  Sun, 11 May 2008 16:37:35 +0200

libgphoto2 (2.4.0-9) unstable; urgency=high

  * Adopt the package within pkg-phototools:
     - Set the Maintainer to the group.
     - Add Frederic Peters and myself as Uploaders.
     - Add Vcs-Browser and Vcs-Git fields accordingly.
  * debian/control:
     - Add a Depends: on libltdl3-dev to libgphoto2-2-dev since libltdl.la
       is referenced in a bunch of “.la” files (Closes: #467527). Setting
       urgency to “high” accordingly, since the bug is also in testing.
     - Add a Homepage field.
     - Make lintian happy, delete the “-1” bits from the versioned B-D on
       libhal-dev.
     - Bump Standards-Version from 3.7.2 to 3.7.3 (no changes needed).
  * debian/copyright:
     - Point to LGPL-2 rather than just LGPL, which now points to
       LGPL-3 (the copyright says LGPL-2+, but let's be precise).
  * debian/patches:
     - Add 75_deprecated_hal_key.dpatch: Replace the deprecated HAL
       property “info.bus” with “info.subsystem” in the HAL FDI generation
       tool, thanks to Martin Pitt (Closes: #472656).

 -- Cyril Brulebois <cyril.brulebois@enst-bretagne.fr>  Sun, 30 Mar 2008 17:30:21 +0200

libgphoto2 (2.4.0-8) unstable; urgency=low

  * debian/patches/45_increase_canon_timeout.dpatch Increase timeout wait for
    an URB to come back on an interrupt endpoint  (closes: #453114)

 -- Frederic Peters <fpeters@debian.org>  Tue, 27 Nov 2007 15:15:11 +0100

libgphoto2 (2.4.0-7) unstable; urgency=low

  * debian/patches/30_additional_camera_support.dpatch: added Canon G9